--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Poppins:wght@400&display=swap');
+
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
